--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud",
+  "name": "toolkit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.13",
-    "axios": "^1.8.2",
-    "bootstrap": "^5.3.3",
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.13"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
